--- a/vue/page_accueil.vue.css
+++ b/vue/page_accueil.vue.css
@@ -1,35 +1,116 @@
-body{
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-}
-
-a{
-text-decoration: none;
-}
-h1{
-  width: 100%;
-  text-align: center;
+body {
+  padding: 0;
   margin: 0;
 }
-nav{
-  display: flex;
-  justify-content: space-between;
-  background-color: lightgreen;
+
+nav {
+  font-family: "Lucida Console", Monaco, monospace;
+  margin-left: 0;
+  padding: 0;
   width: 100%;
-  height: 50px;
-  border-radius: 10px;
+  background: black;
 }
-nav a{
-  font-weight: bold;
+
+nav > ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav > ul > li {
+  float: left;
+  position: relative;
+}
+
+nav li {
+  list-style-type: none;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.sebmenu {
+  display : none;
+}
+
+nav > ul::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+nav a {
+  display: inline-block;
+  text-decoration: none;
+}
+
+nav > ul > li > a {
+  padding: 20px 30px;
   color: white;
-  width: 100%;
-  height: 95%;
-  text-align: center;
-  vertical-align: middle;
 }
-nav a:hover{
-  color :black;
-  border: solid 2px black;
-  border-radius: 10px;
+
+
+nav li:hover .sebmenu {
+  display: inline-block;
+  position : absolute;
+  top: 100%;
+  left: 0px;
+  padding: 0px;
+  z-index: 100000;
+  width: 100%;
+}
+
+.sebmenu li {
+  border-bottom: 1px solid #CCC;
+}
+
+.sebmenu li a {
+  padding: 15px 30px;
+  font-size: 13px;
+  color : WHITE;
+}
+
+.accueil:hover {
+  background-color: #e44d26;
+}
+
+.creation:hover {
+  background-color: #e44d26;
+}
+
+.menu-inscription:hover {
+  background-color: #e44d26;
+}
+
+.menu-connexion:hover {
+  background-color: #e44d26;
+}
+
+.menu-inscription .sebmenu {
+  border-top: 5px solid red;
+  background-color: #FA8072;
+}
+
+.menu-connexion .sebmenu {
+  border-top: 5px solid red;
+  background-color: #FA8072;
+}
+
+.sebmenu li:hover a {
+  color : #EEE;
+}
+
+.menu-inscription .sebmenu li:hover {
+  background-color: #e44d26;
+}
+
+.menu-connexion  .sebmenu li:hover {
+  background-color: #e44d26;
+}
+
+.demande {
+  background-color: #e44d26;
+  float: right;
+}
+
+#header {
+  width: 100%;
 }
