Modif css page d'accueil + css connexion et inscription (+petites modifs dans l'html de connexion et insciptions)

--- a/vue/inscription.vue.css
+++ b/vue/inscription.vue.css
@@ -1,43 +1,147 @@
-body{
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-width: 100%;
+html, body {
+  height: 100%;
 }
 
-a{
-text-decoration: none;
-}
-
-nav{
+body {
+  background: #212F3C;
   display: flex;
-  justify-content: space-between;
-  background-color: lightgreen;
-  width: 100%;
-  height: 50px;
-  border-radius: 10px;
+  justify-content: center;
+  font-size: 16px;
 }
-nav a{
-  font-weight: bold;
-  color: white;
-  width: 100%;
-  height: 95%;
+
+.formulaire {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  align-items: center;
+}
+
+form header {
+  background-color: red;
   text-align: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  color: white;
 }
-nav a:hover{
-  color :black;
-  border: solid 2px black;
-  border-radius: 10px;
+
+form {
+  background: white;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7);
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #333;
 }
-.item p{
+
+form footer {
+  background: red;
+  padding: 10px;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+form label {
+  margin-left: 20px;
+  display: inline-block;
+  margin-top: 30px;
+  margin-bottom: 5px;
+  position: relative;
+}
+
+form label span {
+  color: #FF3838;
+  font-size: 2em;
+  position: absolute;
+  left: 2.3em;
+  top: -10px;
+}
+
+form input {
+  display: block;
+  width: 75%;
+  margin-left: 20px;
+  padding: 5px 20px;
+  font-size: 1em;
+  border-radius: 3px;
+  outline: none;
+  border: 1px solid #ccc;
+}
+
+form .help {
+  margin-left: 20px;
+  font-size: 0.8em;
+  color: #777;
+}
+
+form .valider {
+  position: relative;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  font-family: inherit;
+  color: white;
+  background: red;
+  outline: none;
+  border: none;
+  padding: 7px 40px;
+  font-size: 1.3em;
+  font-weight: 400;
+  box-shadow: 0px 0px 10px rgba(51, 51, 51, 0.4);
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
+}
+
+form button:hover {
+  background: white;
+  color: red;
+}
+
+.contenair {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.cont1, .cont2, .cont4, .cont5 {
+  width: 50%;
+}
+
+.cont2 input, .cont5 input {
+  margin-left: 0px;
+}
+
+.cont2 p, .cont5 p {
+  margin-left: 0px;
+}
+
+.cont3, .cont6 {
   width: 100%;
 }
-.checkbox{
+
+.checkbox {
   display: flex;
+  align-items:baseline;
+  justify-content: space-around;
+  padding-top: 0px;
 }
-.checkbox input{
-  margin-right: 20px;
+
+.checkbox p {
+  margin-left: 0px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
-.checkbox p{
-  margin:0;
+
+.checkbox input {
+  width: inherit;
+}
+
+p {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+}
+
+.box1, .box2, .box3 {
+  display: flex;
+  align-items: center;
 }
