--- a/vue/connexion.vue.css
+++ b/vue/connexion.vue.css
@@ -1,42 +1,114 @@
-body{
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
+html, body {
+  height: 100%;
 }
 
-a{
-text-decoration: none;
-}
-
-nav{
+body {
+  background: #212F3C;
   display: flex;
-  justify-content: space-between;
-  background-color: lightgreen;
-  width: 100%;
-  height: 50px;
-  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
 }
-nav a{
-  font-weight: bold;
+
+.formulaire {
+  width: 40%;
+}
+
+form {
+  background: white;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7);
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #333;
+}
+
+form footer {
+  background: red;
+  padding: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   color: white;
-  width: 100%;
-  height: 95%;
-  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-nav a:hover{
-  color :black;
-  border: solid 2px black;
-  border-radius: 10px;
+
+form footer a {
+    text-decoration: none;
+    color: red;
 }
-.formulaire{
-  display:flex;
-  justify-content: flex-start;
-  width: 50%;
-  flex-wrap: wrap;
+
+.inscription {
+  font-family: inherit;
+  background: white;
+  outline: none;
+  border: none;
+  padding: 5px 15px;
+  font-size: 1.3em;
+  font-weight: 400;
+  box-shadow: 0px 0px 10px rgba(51, 51, 51, 0.4);
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
 }
-.formulaire p,input{
-margin-bottom: 5px;
+
+form footer a:hover {
+  color: white;
 }
-.connexion{
-  height: 32px;
+
+.inscription:hover {
+  background-color: red;
+}
+
+form label {
+  margin-left: 20px;
+  display: inline-block;
+  margin-top: 30px;
+  margin-bottom: 5px;
+  position: relative;
+}
+form label span {
+  color: #FF3838;
+  font-size: 2em;
+  position: absolute;
+  left: 2.3em;
+  top: -10px;
+}
+form input {
+  display: block;
+  width: 80%;
+  margin-left: 20px;
+  padding: 5px 20px;
+  font-size: 1em;
+  border-radius: 3px;
+  outline: none;
+  border: 1px solid #ccc;
+}
+
+form .help {
+  margin-left: 20px;
+  font-size: 0.8em;
+  color: #777;
+}
+
+form .connexion {
+  position: relative;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  font-family: inherit;
+  color: white;
+  background: red;
+  outline: none;
+  border: none;
+  padding: 5px 15px;
+  font-size: 1.3em;
+  font-weight: 400;
+  box-shadow: 0px 0px 10px rgba(51, 51, 51, 0.4);
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
+}
+
+form button:hover {
+  background: white;
+  color: red;
 }
