--- a/vue/erreurInscription.vue.css
+++ b/vue/erreurInscription.vue.css
@@ -1,53 +1,9 @@
-/*
-body{
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-}
-
-a{
-text-decoration: none;
-}
-
-nav{
-  display: flex;
-  justify-content: space-between;
-  background-color: lightgreen;
-  width: 100%;
-  height: 50px;
-  border-radius: 10px;
-}
-nav a{
-  font-weight: bold;
-  color: white;
-  width: 100%;
-  height: 95%;
-  text-align: center;
-}
-nav a:hover{
-  color :black;
-  border: solid 2px black;
-  border-radius: 10px;
-}
-.descr{
-  width: 500px;
-  height: 300px;
-}
-.choix{
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  margin: 0;
-  margin-top: 20px;
-}
-.choix input,label{
-  margin: 10px;
-}
-*/
 body {
   padding: 0;
   margin: 0;
+  background-image:url("erreur404.jpg");
+  background-position: center;
+  background-size: cover;
 }
 
 nav {
