--- a/vue/css/devis.vue.css
+++ b/vue/css/devis.vue.css
@@ -1,3 +1,4 @@
+/*
 body{
 display: flex;
 justify-content: center;
@@ -22,16 +23,25 @@ nav a{
   width: 100%;
   height: 95%;
   text-align: center;
-  vertical-align: middle;
 }
-
 nav a:hover{
   color :black;
   border: solid 2px black;
   border-radius: 10px;
 }
-
-.emploi{
-  border: solid black 2px;
-  
+.descr{
+  width: 500px;
+  height: 300px;
 }
+.choix{
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin: 0;
+  margin-top: 20px;
+}
+.choix input,label{
+  margin: 10px;
+}
+*/
