--- a/vue/connexion.vue.css
+++ b/vue/connexion.vue.css
@@ -104,3 +104,11 @@ form button:hover {
   background: white;
   color: red;
 }
+
+img {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 50px;
+  height: 50px;
+}
