--- a/vue/css/devis.vue.css
+++ b/vue/css/devis.vue.css
@@ -1,215 +1,53 @@
-/*
-body{
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-}
-
-a{
-text-decoration: none;
-}
-
-nav{
-  display: flex;
-  justify-content: space-between;
-  background-color: lightgreen;
-  width: 100%;
-  height: 50px;
-  border-radius: 10px;
-}
-nav a{
-  font-weight: bold;
-  color: white;
-  width: 100%;
-  height: 95%;
-  text-align: center;
-}
-nav a:hover{
-  color :black;
-  border: solid 2px black;
-  border-radius: 10px;
-}
-.descr{
-  width: 500px;
-  height: 300px;
-}
-.choix{
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  margin: 0;
-  margin-top: 20px;
-}
-.choix input,label{
-  margin: 10px;
-}
-*/
-<<<<<<< HEAD:vue/css/devis.vue.css
-=======
-body {
-  padding: 0;
-  margin: 0;
-}
-
-nav {
+.contenair {
+  width: 50%;
+  border: 3px solid black;
+  position:absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -25%;
+  margin-top: -15%;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin-left: 0;
-  padding: 0;
-  width: 100%;
-  background: #212F3C;
-  position: fixed;
-  top: 0px;
+  background-color: rgba(33,47,60, 0.8);
+  color : ghostwhite;
 }
 
-nav > ul {
-  margin: 0;
-  padding: 0;
+.description {
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-top: 80px;
+  margin-left: 10px;
 }
 
-
-nav > ul > li {
-  float: left;
-  position: relative;
+form {
+  margin-left: 10px;
 }
 
-nav li {
-  list-style-type: none;
-  padding-right: 20px;
-  padding-left: 20px;
+.bouton {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content:space-around;
 }
 
-.sebmenu {
-  display : none;
-}
-
-nav > ul::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-nav a {
-  display: inline-block;
-  text-decoration: none;
-}
-
-nav > ul > li > a {
-  padding: 20px 30px;
+.suivant {
+  box-shadow: 0px 0px 10px rgba(51, 51, 51, 0.4);
   color: white;
+  background: red;
+  padding: 5px 15px;
+  font-size: 1.2em;
+  font-family: inherit;
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
+  outline: none;
 }
 
-
-nav li:hover .sebmenu {
-  display: inline-block;
-  position : absolute;
-  top: 100%;
-  left: 0px;
-  padding: 0px;
-  z-index: 100000;
-  width: 100%;
+.valider {
+  box-shadow: 0px 0px 10px rgba(51, 51, 51, 0.4);
+  color: white;
+  background: red;
+  padding: 5px 15px;
+  font-size: 1.1em;
+  font-family: inherit;
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
+  outline: none;
 }
-
-.sebmenu li {
-  border-bottom: 1px solid #CCC;
-}
-
-.sebmenu li a {
-  padding: 15px 30px;
-  font-size: 13px;
-  color : WHITE;
-}
-
-.accueil:hover {
-  background-color: #E74C3C;
-}
-
-.annonces:hover {
-  background-color: #E74C3C;
-  height: 59px;
-}
-
-.portfolios:hover {
-  background-color: #E74C3C;
-  height: 59px;
-}
-
-.compte:hover {
-  background-color: #E74C3C;
-}
-
-.deco:hover {
-  background-color: #E74C3C;
-}
-
-.menu-inscription:hover {
-  background-color: #E74C3C;
-}
-
-.menu-connexion:hover {
-  background-color: #E74C3C;
-}
-
-.menu-inscription .sebmenu {
-  border-top: 5px solid red;
-  background-color: #212F3C;
-}
-
-.menu-connexion .sebmenu {
-  border-top: 5px solid red;
-  background-color: #212F3C;
-}
-
-.sebmenu li:hover a {
-  color : #EEE;
-}
-
-.menu-inscription .sebmenu li:hover {
-  background-color: #E74C3C;
-}
-
-.menu-connexion  .sebmenu li:hover {
-  background-color: #E74C3C;
-}
-
-.demande {
-  background-color: #E74C3C;
-  float: right;
-  height: 59px;
-}
-
-#baniere {
-  width: 100%;
-  margin-top: 59px;
-}
-
-.accueil {
-  font-weight: bold;
-}
-
-.menu-connexion {
-  float: right;
-}
-
-.menu-inscription {
-  float: right;
-}
-
-.compte {
-  float: right;
-}
-
-.deco {
-  float: right;
-}
-
-.demande {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-.menu-inscription {
-  padding-left: 25px;
-  padding-right: 25px;
-}
->>>>>>> ca737979784440eb198c69604495f1ff4c05b8a1:vue/devis.vue.css
