--- a/vue/css/devis.vue.css
+++ b/vue/css/devis.vue.css
@@ -1,3 +1,7 @@
+body {
+  background-image: url(../../model/data/img/imageFond.jpg);
+}
+
 .contenair {
   width: 50%;
   border: 3px solid black;
@@ -15,6 +19,7 @@
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin-top: 80px;
   margin-left: 10px;
+  color: white;
 }
 
 form {
