--- a/vue/css/footer.vue.css
+++ b/vue/css/footer.vue.css
@@ -1,29 +1,37 @@
 body {
-  margin : 0;
+  margin: 0;
+  padding: 0;
 }
 
 .footer {
-  width: 100%;
+  width: 90%;
   background-color: #212F3C;
   padding: 0;
+  padding-left: 5%;
+  padding-right: 5%;
   margin: 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   color: white;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 
-h2 {
+.footer h2 {
   padding-bottom: 10px;
   margin-bottom: 15px;
   border-bottom: 1px solid white;
+  font-size: 115%;
+}
+
+.footer p {
+  font-size: 90%;
 }
 
 .cont1, .cont2, .cont3 {
   width: 25%;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .cont1 img {
