--- a/vue/css/mode_emploi.vue.css
+++ b/vue/css/mode_emploi.vue.css
@@ -4,179 +4,14 @@ body {
   background-image: url(../../model/data/img/imageFond.jpg);
 }
 
-nav {
-  z-index: 2;
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin-left: 0;
-  padding: 0;
-  width: 100%;
-  background: #212F3C;
-  position: fixed;
-  top: 0px;
-}
-
-nav > ul {
-  margin: 0;
-  padding: 0;
-}
-
-
-nav > ul > li {
-  float: left;
-  position: relative;
-}
-
-nav li {
-  list-style-type: none;
-  padding-right: 20px;
-  padding-left: 20px;
-}
-
-.sebmenu {
-  display : none;
-}
-
-nav > ul::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-nav a {
-  display: inline-block;
-  text-decoration: none;
-}
-
-nav > ul > li > a {
-  padding: 20px 30px;
-  color: white;
-}
-
-
-nav li:hover .sebmenu {
-  display: inline-block;
-  position : absolute;
-  top: 100%;
-  left: 0px;
-  padding: 0px;
-  z-index: 100000;
-  width: 100%;
-}
-
-.sebmenu li {
-  border-bottom: 1px solid #CCC;
-}
-
-.sebmenu li a {
-  padding: 15px 30px;
-  font-size: 13px;
-  color : WHITE;
-}
-
-.accueil:hover {
-  background-color: #E74C3C;
-}
-
-.annonces:hover {
-  background-color: #E74C3C;
-  height: 59px;
-}
-
-.portfolios:hover {
-  background-color: #E74C3C;
-  height: 59px;
-}
-
-.compte:hover {
-  background-color: #E74C3C;
-}
-
-.deco:hover {
-  background-color: #E74C3C;
-}
-
-.menu-inscription:hover {
-  background-color: #E74C3C;
-}
-
-.menu-connexion:hover {
-  background-color: #E74C3C;
-}
-
-.menu-inscription .sebmenu {
-  border-top: 5px solid red;
-  background-color: #212F3C;
-}
-
-.menu-connexion .sebmenu {
-  border-top: 5px solid red;
-  background-color: #212F3C;
-}
-
-.sebmenu li:hover a {
-  color : #EEE;
-}
-
-.menu-inscription .sebmenu li:hover {
-  background-color: #E74C3C;
-}
-
-.menu-connexion  .sebmenu li:hover {
-  background-color: #E74C3C;
-}
-
-.demande {
-  background-color: #E74C3C;
-  float: right;
-  height: 59px;
-}
-
-#baniere {
-  width: 100%;
-  margin-top: 59px;
-}
-
-.accueil {
-  font-weight: bold;
-}
-
-.menu-connexion {
-  float: right;
-}
-
-.menu-inscription {
-  float: right;
-}
-
-.compte {
-  float: right;
-}
-
-.deco {
-  float: right;
-}
-
-.demande {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-.menu-inscription {
-  padding-left: 25px;
-  padding-right: 25px;
-}
-
 .modeEmploi {
   border: 5px inset #E74C3C;
   box-shadow: 12px 12px 2px 1px rgba(231, 76, 60, .2);
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  position:absolute;
-  left: 50%;
-  width: 80%;
-  top: 50%;
-  margin-left: -40%;
-  margin-top: -18%;
-  margin-bottom: 60px;
+  margin: 0 auto;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  width: 70%;
   z-index: 1;
   background-color: rgba(33,47,60, 0.8);
   color : ghostwhite;
