--- a/vue/css/message.vue.css
+++ b/vue/css/message.vue.css
@@ -1,3 +1,78 @@
+body {
+  margin-top: 90px;
+}
+
+.container {
+  width: 90%;
+  margin-left: 5%;
+}
+
+form {
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #333;
+}
+
+form label {
+  display: inline-block;
+  margin-bottom: 5px;
+  position: relative;
+}
+
+form input {
+  display: block;
+  width: 40%;
+  padding: 5px 20px;
+  font-size: 1em;
+  border-radius: 3px;
+  outline: none;
+  border: 1px solid #ccc;
+  margin-bottom: 15px;
+}
+
+form .message {
+  width: 95%;
+  height: 100px;
+}
+
+form .valider {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  font-family: inherit;
+  color: white;
+  background: #1fab91;
+  outline: none;
+  border: none;
+  padding: 5px 30px;
+  font-size: 1.3em;
+  font-weight: 400;
+  box-shadow: 0px 0px 10px rgba(51, 51, 51, 0.4);
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
+}
+
+.messages {
+  margin-left: 15px;
+}
+
+.messages h3, .messages h4, .messages p {
+  margin-left: 15px;
+}
+
+.messages h3 {
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.messages h4 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.messages p {
+  margin-top: 10px;
+}
+
 .messagesEnvoyes {
   background-color: #00c4ff;
   border-radius: 15px;
@@ -13,5 +88,5 @@
   width: 49%;
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-left: 51%;
+  margin-left: 50%;
 }
