--- a/vue/css/messagerie.vue.css
+++ b/vue/css/messagerie.vue.css
@@ -70,3 +70,12 @@ h3 {
   color: black;
   text-decoration: none;
 }
+
+p {
+  margin-left: 5%;
+  padding-top: 15px;
+  padding-left: 20px;
+  font-size: 1.2em;
+  color: red;
+  font-weight: bold;
+}
