--- a/vue/css/message.vue.css
+++ b/vue/css/message.vue.css
@@ -30,8 +30,9 @@ form input {
 }
 
 form .message {
-  width: 95%;
+  width: 100%;
   height: 100px;
+  font-size: 1.3em;
 }
 
 form .valider {
@@ -67,6 +68,12 @@ form .valider {
 
 .messages p {
   margin-top: 10px;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  -o-hyphens: auto;
+  hyphens: auto;
+  max-width: 95%;
 }
 
 .messagesEnvoyes {
