--- a/vue/css/header_compte_graphiste.vue.css
+++ b/vue/css/header_compte_graphiste.vue.css
@@ -5,11 +5,10 @@ body {
 
 #header_compte_graphiste {
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin-left: 0;
+  width: 50%;
+  margin-left: 25%;
+  background-color: #212F3C;
   padding: 0;
-  padding-left: 25%;
-  width: 90%;
-  background: #0000;
   position: fixed;
   top: 59px;
   z-index: 3;
@@ -18,6 +17,8 @@ body {
 #header_compte_graphiste > ul {
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: space-around;
 }
 
 
