--- a/vue/css/messagerie.vue.css
+++ b/vue/css/messagerie.vue.css
@@ -1,5 +1,8 @@
 body {
-  margin-top: 70px;
+  margin-top: 90px;
+  background-image: url(../../model/data/img/imageFond3.jpg);
+  background-attachment: fixed;
+  margin-bottom: 60px;
 }
 
 .container {
@@ -7,9 +10,17 @@ body {
   margin-left: 5%;
 }
 
+img {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: 90px;
+  right: 5%;
+}
+
 form {
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
+  color: white;
 }
 
 form label {
@@ -57,6 +68,7 @@ form .valider {
 
 h2 {
   margin-left: 20px;
+  color: white
 }
 
 a {
@@ -69,7 +81,7 @@ a:hover h3 {
 
 h3 {
   margin-left: 20px;
-  color: black;
+  color: white;
   text-decoration: none;
 }
 
