--- a/vue/css/creerPortfolio.css
+++ b/vue/css/creerPortfolio.css
@@ -35,23 +35,26 @@ form input {
 
 form .desc {
   width: 100%;
-  height: 100px;
+  height: 125px;
   font-size: 1.3em;
   border: 1px solid red;
+  resize:none;
 }
 
 form .comp {
   width: 98%;
-  height: 75px;
+  height: 100px;
   font-size: 1.3em;
   border: 1px solid red;
+  resize:none;
 }
 
 form .log {
   width: 100%;
-  height: 75px;
-  font-size: 1.2em;
+  height: 100px;
+  font-size: 1.3em;
   border: 1px solid red;
+  resize:none;
 }
 
 form .competlog {
