--- a/vue/css/portfolio.css
+++ b/vue/css/portfolio.css
@@ -56,3 +56,24 @@ body {
 .portfolio .competence, .portfolio .logiciel {
   margin-bottom: 25px;
 }
+
+button {
+  margin-top: 20px;
+  margin-left: 5%;
+  font-family: inherit;
+  color: white;
+  background: red;
+  outline: none;
+  border: none;
+  padding: 5px 30px;
+  font-size: 1.3em;
+  font-weight: 400;
+  box-shadow: 0px 0px 10px rgba(51, 51, 51, 0.4);
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
+}
+
+button:hover {
+  background-color: white;
+  color: red;
+}
