--- a/vue/css/portfolio.css
+++ b/vue/css/portfolio.css
@@ -3,11 +3,9 @@ body {
 }
 
 .baniere {
-  width: 90%;
+  width: 100%;
   background-color: black;
   margin-top: 59px;
-  padding-left: 5%;
-  padding-right: 5%;
 }
 
 .container h2 {
@@ -24,6 +22,10 @@ body {
   width: 90%;
   margin-left: 5%;
   margin-bottom: 30px;
+}
+
+.portfolio h3 {
+  color: red;
 }
 
 .portfolio h3, .portfolio h4 {
