--- a/vue/css/compte_client.vue.css
+++ b/vue/css/compte_client.vue.css
@@ -3,29 +3,52 @@
   margin-top: 19px;
 }
 
-label{
-  display: block;
-  width: 10%;
-  float: left;
+.formulaire {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 40%;
+  margin-left: 30%;
+  text-align: left;
 }
 
-input[type=text],input[type=email],input[type=password]{
-  width: 50%;
-  padding: 12px 20px;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
+form {
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7);
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #333;
 }
 
-button {
-  width: 50%;
-  background-color: #212F3C;
+.formulaire .enregistrer {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  font-family: inherit;
+  background-color: red;
   color: white;
-  padding: 12px 20px;
+  outline: none;
+  border: none;
+  padding: 5px 15px;
+  font-size: 1.3em;
+  font-weight: 400;
+  box-shadow: 0px 0px 10px rgba(51, 51, 51, 0.4);
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
+  margin-left: 20px;
 }
 
-div {
-  border-radius: 5px;
-  padding: 10px;
+form label {
+  margin-left: 20px;
+  display: inline-block;
+  margin-top: 30px;
+  margin-bottom: 5px;
+  position: relative;
+}
 
+form input {
+  display: block;
+  width: 80%;
+  margin-left: 20px;
+  padding: 5px 20px;
+  font-size: 1em;
+  border-radius: 3px;
+  outline: none;
+  border: 1px solid #ccc;
 }
